--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,6 +1,7 @@
 name: Build action
 
 on: 
+  workflow_dispatch:
   push:
   schedule:
     - cron: '15 3 * * *'  # every day at 03:15 (just wanted to avoid midnight)
