--- a/.apko.yaml
+++ b/.apko.yaml
@@ -4,7 +4,7 @@ contents:
     - https://dl-cdn.alpinelinux.org/alpine/edge/main
   packages:
     - alpine-baselayout-data
-    - nginx
+    - nginx-test
 
 entrypoint:
   type: service-bundle
